Programado o comportamento das operações CRUD nas rotas de usuários e produtos. Algumas rotas foram documentadas. Issues #3, #5, #9, #10, #11, #15, #16, e #13 em andamento. ~por Gabriel Rocha
