# src/Models/CartModel.js
@@ -1,0 +1,28 @@
+// const mongoose = require("mongoose");
+
+// const cartSchema = new mongoose.Schema({
+//   products: [
+//     {
+//       name: {
+//         type: String,
+//         required: true
+//       },
+//       preco: {
+//         type: Number,
+//         required: true
+//       },
+//       desc: {
+//         type: String,
+//         required: true,
+//       },
+//       desc: {
+//         type:
+//       }
+//       createdBy: String,
+//     },
+//   ],
+//   ownedBy: {
+//     type: String,
+//     required: true,
+//   },
+// });
